cmake_minimum_required(VERSION 3.14)

project(FIT1048)

set(CMAKE_CXX_STANDARD 14)

add_executable(1-SillyStory FIT1048 lab2/SillyStory.cpp)

add_executable(2-StringAnalyzer FIT1048 lab2/StringAnalyzer.cpp)

add_executable(3-FileReadWriter FIT1048 lab2/FileReadWriter.cpp)

add_executable(4-GuessMyNumber FIT1048 lab3/GuessMyNumber.cpp)

add_executable(5-StringRacers FIT1048 lab3/StringRacers.cpp)

add_executable(6-Magic8Ball FIT1048 lab4/Magic8Ball.cpp)

add_executable(7-WordScrambler FIT1048 lab4/WordScrambler.cpp)

add_executable(8-LittlePiggy1 FIT1048 lab5/LittlePiggy1.cpp)

add_executable(9-LittlePiggy2 FIT1048 lab6/LittlePiggy2.cpp)

add_executable(10-RPGGame1 FIT1048 lab7/RPGGame1.cpp)

add_executable(11-NoughtsAndCrosses FIT1048 lab8/NoughtsAndCorsses.cpp)

add_executable(12-RPGGame2 FIT1048 lab9/RPGGame2.cpp)