cmake_minimum_required(VERSION 3.14)

project(FIT1048)

set(CMAKE_CXX_STANDARD 14)

add_executable(2.1-SillyStory FIT1048 lab2/2.1-SillyStory.cpp)

add_executable(2.2-StringAnalyzer FIT1048 lab2/2.2-StringAnalyzer.cpp)

add_executable(2.3-FileReadWriter FIT1048 lab2/2.3-FileReadWriter.cpp)

add_executable(3.1-GuessMyNumber FIT1048 lab3/3.1-GuessMyNumber.cpp)

add_executable(3.2-StringRacers FIT1048 lab3/3.2-StringRacers.cpp)

add_executable(4.1-Magic8Ball FIT1048 lab4/4.1-Magic8Ball.cpp)

add_executable(4.2-WordScrambler FIT1048 lab4/4.2-WordScrambler.cpp)

add_executable(5.1-LittlePiggy1 FIT1048 lab5/5.1-LittlePiggy1.cpp)

add_executable(6.1-LittlePiggy2 FIT1048 lab6/6.1-LittlePiggy2.cpp)

add_executable(7.1-RPGGame1 FIT1048 lab7/7.1-RPGGame1.cpp)

add_executable(8.1-NoughtsAndCrosses FIT1048 lab8/8.1-NoughtsAndCorsses.cpp)

add_executable(9.1-RPGGame2 FIT1048 lab9/9.1-RPGGame2.cpp)