cmake_minimum_required(VERSION 3.14)

project(FIT1048)

set(CMAKE_CXX_STANDARD 14)

add_executable(2.1-SillyStory FIT1048 lab2/2.1-SillyStory.cpp)

add_executable(2.2-StringAnalyzer FIT1048 lab2/2.2-StringAnalyzer.cpp)

add_executable(2.3-FileReadWriter1 FIT1048 lab2/2.3-FileReadWriter1.cpp)

add_executable(3.1-GuessMyNumber1 FIT1048 lab3/3.1-GuessMyNumber.cpp)

add_executable(3.2-GuessMyNumber2 FIT1048 lab3/3.2-GuessMyNumber2.cpp)

add_executable(3.3-StringRacers FIT1048 lab3/3.3-StringRacers.cpp)

add_executable(3.4-FileReadWriter2 FIT1048 lab3/3.4-FileReadWriter2.cpp)

add_executable(4.1-Magic8Ball FIT1048 lab4/4.1-Magic8Ball.cpp)

add_executable(4.2-WordScrambler FIT1048 lab4/4.2-WordScrambler.cpp)

add_executable(5.1-LittlePiggy1 FIT1048 lab5/5.1-LittlePiggy1.cpp)

add_executable(6.1-Player FIT1048 lab6/6.1-Player.cpp)

add_executable(6.2-LittlePiggy2 FIT1048 lab6/6.2-LittlePiggy2.cpp)

add_executable(7.1-Character FIT1048 lab7/7.1-Character.cpp)

add_executable(7.2-Item FIT1048 lab7/7.2-Item.cpp)

add_executable(7.3-RPGGame1 FIT1048 lab7/7.3-RPGGame1.cpp)

add_executable(8.1-NoughtsAndCrosses1 FIT1048 lab8/8.1-NoughtsAndCrosses1.cpp)

add_executable(8.2-NoughtsAndCrosses2 FIT1048 lab8/8.2-NoughtsAndCrosses2.cpp)

add_executable(9.1-Character2 FIT1048 lab9/9.1-Character2.cpp)

add_executable(9.2-Fighter FIT1048 lab9/9.2-Fighter.cpp)

add_executable(9.3-Thief FIT1048 lab9/9.3-Thief.cpp)

add_executable(9.4-Healer FIT1048 lab9/9.4-Healer.cpp)

add_executable(9.5-Wizard FIT1048 lab9/9.5-Wizard.cpp)

add_executable(9.6-RPGGame2 FIT1048 lab9/9.6-RPGGame2.cpp)

add_executable(9.1-RPGGame2 FIT1048 lab9/9.1-Character2.cpp)

add_executable(10.1-RPGGame4 FIT1048 lab10/10.3-RPGGame3.cpp)